--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,4 @@
-name: release
+name: CD
 
 env:
   GO_VERSION: stable
@@ -7,6 +7,9 @@ on:
   push:
     tags:
       - v*
+
+permissions:
+  contents: write
 
 jobs:
   goreleaser-release:
@@ -21,5 +24,7 @@ jobs:
         with:
           version: latest
           args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: rajatjindal/krew-release-bot@v0.0.46
-        if: ${{ !contains(github.ref, "rc") }}
+        if: ${{ !contains(github.ref, 'rc') }}
